--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,12 +18,14 @@ Our partners:
   	<a href="https://www.quantware.com/" target="_blank" rel="noopener noreferrer">
 		<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logos/QuantWare.png" style="height: 100px">
 	</a>
-	
   	<a href="https://www.orangeqs.com/" target="_blank" rel="noopener noreferrer">
 		<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logos/OrangeQS.png" style="height: 100px">
 	</a>
 	<a href="https://quantumdelta.nl/" target="_blank" rel="noopener noreferrer">
   	<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logos/QDNL.png" style="height: 100px">
+	</a>
+	<a href="https://next-generation-eu.europa.eu/index_en" target="_blank" rel="noopener noreferrer">
+  	<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logos/Next-generation-EU.png" style="height: 100px">
 	</a>
 	<a href="https://www.qdnlparticipations.nl/" target="_blank" rel="noopener noreferrer">	
   	<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logos/QDNL-Participations.png" style="height: 100px">
